# 27-cap2-chat-imagem-pdf

./: .gitignore  README.md  pyproject.toml
src/chat/: crew.py  main.py
src/chat/config/: agents.yaml  tasks.yaml
src/chat/tools/: custom_tool.py
