[project]
name = "chat"
version = "0.1.0"
description = "chat using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=0.14.0",
    "crewai[tools]>=0.80.0,<1.0.0",
    "python-docx>=1.1.2",
    "reportlab>=4.2.5",
    "streamlit>=1.40.1",
]

[project.scripts]
chat = "chat.main:run"
run_crew = "chat.main:run"
train = "chat.main:train"
replay = "chat.main:replay"
test = "chat.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
